--- a/IvasList/src/main/res/layout/activity_home.xml
+++ b/IvasList/src/main/res/layout/activity_home.xml
@@ -26,6 +26,7 @@
                 android:text="@string/add_tag_button"
                 android:layout_alignParentRight="true"
                 android:id="@+id/button"
+                android:onClick="addTag"
                 />
 
     </RelativeLayout>
@@ -33,6 +34,6 @@
     <ListView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:id="@+id/listView"/>
+            android:id="@android:id/list"/>
 
 </LinearLayout>
