--- a/IvasList/src/main/res/layout/add_tag.xml
+++ b/IvasList/src/main/res/layout/add_tag.xml
@@ -5,9 +5,9 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
     <EditText
-            android:id="@+id/tag_name"
+            android:id="@+id/tag_name_input"
             android:inputType="textShortMessage"
-            android:hint="Name of the tag"
+            android:hint="@string/tag_name_hint"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 </LinearLayout>
