--- a/IvasList/src/main/res/layout/activity_home.xml
+++ b/IvasList/src/main/res/layout/activity_home.xml
@@ -32,8 +32,9 @@
     </RelativeLayout>
 
     <ListView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@android:id/list"/>
+            android:id="@+id/list"
+            android:background="#008c6c"/>
 
 </LinearLayout>
