--- a/IvasList/src/main/res/menu/home.xml
+++ b/IvasList/src/main/res/menu/home.xml
@@ -1,6 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/action_settings"
-        android:title="@string/action_search"
+        android:title="@android:string/search_go"
+        android:icon="@android:drawable/ic_menu_search"
         android:orderInCategory="100"
         android:showAsAction="always" />
 </menu>
