--- a/IvasList/src/main/res/layout/list_tag.xml
+++ b/IvasList/src/main/res/layout/list_tag.xml
@@ -1,15 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    <TextView
-            android:layout_height="match_parent"
-            android:layout_width="match_parent"
-            android:height="@dimen/tag_item_height"
-            android:gravity="center_vertical"
-            android:id="@+id/list_tag_name"
-            android:background="#ff8c6c"
-            >
+    android:id="@+id/list_tag_body"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    >
 
-    </TextView>
+    <TextView style="@style/tag_style" android:id="@+id/list_tag_name"/>
 </LinearLayout>
