--- a/IvasList/src/main/res/values/styles.xml
+++ b/IvasList/src/main/res/values/styles.xml
@@ -1,20 +1,13 @@
 <resources>
-
-    <!--
-        Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
-    -->
     <style name="AppBaseTheme" parent="android:Theme.Light">
-        <!--
-            Theme customizations available in newer API levels can go in
-            res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
-        -->
     </style>
-
-    <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
-        <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
-
+    <style name="tag_style" parent="android:TextAppearance.DeviceDefault.Medium">
+        <item name="android:background">@drawable/tag_background_color</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:height">@dimen/tag_item_height</item>
+    </style>
 </resources>
