--- a/IvasList/src/main/res/layout/items_list.xml
+++ b/IvasList/src/main/res/layout/items_list.xml
@@ -14,8 +14,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="@string/tags_label"
-                android:id="@+id/textView"
+                android:text="item_label"
+                android:id="@+id/list_title"
                 android:layout_alignParentLeft="true"
                 />
 
