--- a/IvasList/src/main/res/layout/items_list.xml
+++ b/IvasList/src/main/res/layout/items_list.xml
@@ -26,7 +26,7 @@
                 android:text="@string/add_tag_button"
                 android:layout_alignParentRight="true"
                 android:id="@+id/button"
-                android:onClick="addTag"
+                android:onClick="add"
                 />
 
     </RelativeLayout>
