--- a/IvasList/src/main/res/layout/note.xml
+++ b/IvasList/src/main/res/layout/note.xml
@@ -7,7 +7,7 @@
     <EditText
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/note_name_field"
+        android:id="@+id/note_title_field"
         android:layout_gravity="left|center_vertical"
         android:hint="What is this about?" />
 
@@ -15,7 +15,7 @@
         android:layout_width="fill_parent"
         android:layout_height="428dp"
         android:inputType="textMultiLine"
-        android:id="@+id/note_text_field"
+        android:id="@+id/note_body_field"
         android:paddingTop="40sp"
         android:hint="Let's hear the details..." />
 
@@ -23,7 +23,8 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:text="Save"
-        android:id="@+id/save_note_button" />
+        android:id="@+id/save_note_button"
+        android:onClick="save"/>
 
 
 </LinearLayout>
